--- a/src/credentials/tests/BUILD.gn
+++ b/src/credentials/tests/BUILD.gn
@@ -17,6 +17,7 @@ import("//build_overrides/chip.gni")
 import("//build_overrides/nlunit_test.gni")
 
 import("${chip_root}/build/chip/chip_test_suite.gni")
+import("${chip_root}/build/chip/fuzz_test.gni")
 
 static_library("cert_test_vectors") {
   output_name = "libCertTestVectors"
@@ -62,15 +63,9 @@ chip_test_suite("tests") {
   ]
 }
 
-executable("fuzz-chip-cert") {
-  sources = [ "FuzzChipCert.cpp" ]
-
-  public_deps = [ "${chip_root}/src/credentials" ]
-
-  public_configs = [
-    "//build/config/compiler:libfuzzer_fuzzing",
-    "//build/config/compiler:sanitize_address",
-  ]
-
-  output_dir = "${root_out_dir}/tests"
+if (enable_fuzz_test_targets) {
+  chip_fuzz_target("fuzz-chip-cert") {
+    sources = [ "FuzzChipCert.cpp" ]
+    public_deps = [ "${chip_root}/src/credentials" ]
+  }
 }
