--- a/examples/shell/openiotsdk/CMakeLists.txt
+++ b/examples/shell/openiotsdk/CMakeLists.txt
@@ -24,6 +24,15 @@ set(APP_TARGET chip-openiotsdk-shell-example)
 
 include(${OPENIOTSDK_COMMON}/cmake/sdk.cmake)
 
+# LwIP configuration
+if(TARGET lwip-cmsis-port)
+    # lwip requires user_lwipopts.h, we use the custom settings
+    target_include_directories(lwipopts
+        INTERFACE
+            ${OPEN_IOT_SDK_CONFIG}/lwip
+    )
+endif()
+
 project(${APP_TARGET} LANGUAGES C CXX ASM)
 add_executable(${APP_TARGET})
 
