--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -65,6 +65,9 @@ shared_library("ChipDeviceCtrl") {
       "chip/internal/ChipThreadWork.h",
       "chip/internal/CommissionerImpl.cpp",
       "chip/logging/LoggingRedirect.cpp",
+      "chip/dynamic_server/Server.cpp",
+      "chip/server/Options.cpp",
+      "chip/server/ServerInit.cpp",
     ]
   } else {
     sources += [
@@ -102,7 +105,7 @@ shared_library("ChipDeviceCtrl") {
 
   if (chip_controller) {
     public_deps += [
-      "${chip_root}/src/controller/data_model",
+      "${chip_root}/src/controller/python/data-model",
       "${chip_root}/src/credentials:file_attestation_trust_store",
     ]
   } else {
@@ -162,6 +165,8 @@ pw_python_action("python") {
         "chip/native/__init__.py",
         "chip/setup_payload/__init__.py",
         "chip/setup_payload/setup_payload.py",
+        "chip/dynamic_server/Server.py",
+        "chip/dynamic_server/AfTypes.py",
         "chip/storage/__init__.py",
         "chip/tlv/__init__.py",
         "chip/utils/CommissioningBuildingBlocks.py",
