--- a/.github/workflows/cherry-picks.yaml
+++ b/.github/workflows/cherry-picks.yaml
@@ -3,7 +3,7 @@ name: Cherry-Pick Merges
 on:
   pull_request:
     branches:
-      - test-main
+      - master
     types: ["closed"]
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
       - name: Cherry-Pick into sve branch
         uses: carloscastrojumo/github-cherry-pick-action@v1.0.1
         with:
-          branch: test-sve
+          branch: sve
           reviewers: |
             woody-apple
             andy31415
