--- a/src/platform/Linux/BUILD.gn
+++ b/src/platform/Linux/BUILD.gn
@@ -77,19 +77,24 @@ static_library("Linux") {
     "PosixConfig.h",
     "SystemPlatformConfig.h",
     "SystemTimeSupport.cpp",
-    "bluez/AdapterIterator.cpp",
-    "bluez/AdapterIterator.h",
-    "bluez/ChipDeviceScanner.cpp",
-    "bluez/ChipDeviceScanner.h",
-    "bluez/Helper.cpp",
-    "bluez/Helper.h",
-    "bluez/MainLoop.cpp",
-    "bluez/MainLoop.h",
-    "bluez/Types.h",
   ]
 
   if (chip_enable_openthread) {
     sources += [ "NetworkCommissioningThreadDriver.cpp" ]
+  }
+
+  if (chip_enable_ble) {
+    sources += [
+      "bluez/AdapterIterator.cpp",
+      "bluez/AdapterIterator.h",
+      "bluez/ChipDeviceScanner.cpp",
+      "bluez/ChipDeviceScanner.h",
+      "bluez/Helper.cpp",
+      "bluez/Helper.h",
+      "bluez/MainLoop.cpp",
+      "bluez/MainLoop.h",
+      "bluez/Types.h",
+    ]
   }
 
   deps = [ "${chip_root}/src/setup_payload" ]
