--- a/examples/ota-requestor-app/linux/BUILD.gn
+++ b/examples/ota-requestor-app/linux/BUILD.gn
@@ -23,6 +23,8 @@ executable("chip-ota-requestor-app") {
     "${chip_root}/examples/platform/linux:app-main",
     "${chip_root}/src/app/server",
     "${chip_root}/src/lib",
+    "${chip_root}/src/platform/Linux/NetworkCommissioningDriver.h",
+    "${chip_root}/src/platform/Linux/NetworkCommissioningEthernetDriver.cpp",
   ]
 
   cflags = [ "-Wconversion" ]
