--- a/src/app/tests/suites/certification/Test_TC_DLRK_2_7.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DLRK_2_7.yaml
@@ -181,7 +181,7 @@ tests:
                     hasValue: false
 
     - label:
-          "send Get Year Day Schedule Command to DUT and verify NOT_FOUND
+          "send Get Year Day Schedule Command to DUT and verify FAILURE
           response"
       command: "GetYearDaySchedule"
       arguments:
@@ -197,7 +197,7 @@ tests:
               - name: "userIndex"
                 value: 5
               - name: "status"
-                value: 0x8B
+                value: 0x01
               - name: "LocalStartTime"
                 constraints:
                     hasValue: false
