Restyled by prettier-yaml

--- a/src/app/tests/suites/certification/Test_TC_DLRK_2_7.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DLRK_2_7.yaml
@@ -181,8 +181,7 @@ tests:
                     hasValue: false
 
     - label:
-          "send Get Year Day Schedule Command to DUT and verify FAILURE
-          response"
+          "send Get Year Day Schedule Command to DUT and verify FAILURE response"
       command: "GetYearDaySchedule"
       arguments:
           values:
