--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -42,6 +42,9 @@ jobs:
                       token: ${{ github.token }}
                   attempt_limit: 3
                   attempt_delay: 2000
+            - name: Bootstrap
+              timeout-minutes: 10
+              run: scripts/build/gn_bootstrap.sh
             - name: CI Examples Linux
               shell: bash
               run: |
@@ -65,6 +68,9 @@ jobs:
                       token: ${{ github.token }}
                   attempt_limit: 3
                   attempt_delay: 2000
+            - name: Bootstrap
+              timeout-minutes: 10
+              run: scripts/build/gn_bootstrap.sh
             - name: CI Examples ESP32
               shell: bash
               run: |
@@ -88,6 +94,9 @@ jobs:
                       token: ${{ github.token }}
                   attempt_limit: 3
                   attempt_delay: 2000
+            - name: Bootstrap
+              timeout-minutes: 10
+              run: scripts/build/gn_bootstrap.sh
             - name: CI Examples NRFConnect
               shell: bash
               run: |
