--- a/.github/workflows/examples-linux-imx.yaml
+++ b/.github/workflows/examples-linux-imx.yaml
@@ -31,7 +31,12 @@ jobs:
         if: github.actor != 'restyled-io[bot]'
 
         container:
-            image: connectedhomeip/chip-build-imx:0.5.84
+            # TODO: this image SHOULD use a newer version.
+            #
+            # NOTE: After https://github.com/project-chip/connectedhomeip/pull/19941
+            #       the image became large enough that github CI runs out of space.
+            #       The image has increased from aroud 2.5GB to 10+GB
+            image: connectedhomeip/chip-build-imx:0.5.79
 
         steps:
             - uses: Wandalen/wretry.action@v1.0.15
