per Damian-Nordic, introduce chip_enable_network_commissioning
This allows general and ethernet network commissioning source to be
conditionally included in platform configuration.

--- a/src/platform/Linux/BUILD.gn
+++ b/src/platform/Linux/BUILD.gn
@@ -80,6 +80,13 @@ static_library("Linux") {
     sources += [ "NetworkCommissioningThreadDriver.cpp" ]
   }
 
+  if (chip_enable_network_commissioning) {
+    sources += [
+      "NetworkCommissioningDriver.h",
+      "NetworkCommissioningEthernetDriver.cpp",
+    ]
+  }
+
   if (chip_enable_ble) {
     sources += [
       "bluez/AdapterIterator.cpp",
