--- a/src/platform/Ameba/BUILD.gn
+++ b/src/platform/Ameba/BUILD.gn
@@ -41,14 +41,20 @@ static_library("Ameba") {
     "KeyValueStoreManagerImpl.h",
     "Logging.cpp",
     "LwIPCoreLock.cpp",
-    "NetworkCommissioningDriver.h",
-    "NetworkCommissioningWiFiDriver.cpp",
     "PlatformManagerImpl.cpp",
     "PlatformManagerImpl.h",
     "SoftwareUpdateManagerImpl.h",
     "SystemTimeSupport.cpp",
     "SystemTimeSupport.h",
   ]
+
+  if (chip_enable_network_commissioning) {
+    sources += [ "NetworkCommissioningDriver.h" ]
+  }
+
+  if (chip_enable_wifi) {
+    sources += [ "NetworkCommissioningWiFiDriver.cpp" ]
+  }
 
   deps = [
     "${chip_root}/src/lib/dnssd:platform_header",
