--- a/src/platform/Tizen/BUILD.gn
+++ b/src/platform/Tizen/BUILD.gn
@@ -53,9 +53,6 @@ static_library("Tizen") {
     "Logging.cpp",
     "MainLoop.cpp",
     "MainLoop.h",
-    "NetworkCommissioningDriver.h",
-    "NetworkCommissioningThreadDriver.cpp",
-    "NetworkCommissioningWiFiDriver.cpp",
     "PlatformManagerImpl.cpp",
     "PlatformManagerImpl.h",
     "PosixConfig.cpp",
@@ -79,6 +76,14 @@ static_library("Tizen") {
     sources += [ "DnssdImpl.cpp" ]
 
     deps += [ "${chip_root}/src/lib/dnssd:platform_header" ]
+  }
+
+  if (chip_network_commissioning) {
+    sources += [
+      "NetworkCommissioningDriver.h",
+      "NetworkCommissioningThreadDriver.cpp",
+      "NetworkCommissioningWiFiDriver.cpp",
+    ]
   }
 
   if (chip_enable_openthread) {
