--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -57,14 +57,20 @@ declare_args() {
 declare_args() {
   chip_openthread_ftd = chip_enable_openthread
 
+  # Enable network commissioning.
+  chip_enable_network_commissioning =
+      chip_device_platform == "ameba" || chip_device_platform == "darwin" ||
+      chip_device_platform == "esp32" || chip_device_platform == "linux" ||
+      chip_device_platform == "mbed" || chip_device_platform == "qpg" ||
+      chip_device_platform == "tizen" || chip_device_platform == "webos"
+
   # Enable wifi support.
   chip_enable_wifi =
       chip_device_platform == "linux" || chip_device_platform == "esp32" ||
       chip_device_platform == "mbed" || chip_device_platform == "tizen" ||
       chip_device_platform == "android" || chip_device_platform == "ameba" ||
       chip_device_platform == "webos" || chip_device_platform == "cc32xx" ||
-      chip_device_platform == "bl602" || chip_device_platform == "bl602" ||
-      chip_device_platform == "mw320" ||
+      chip_device_platform == "bl602" || chip_device_platform == "mw320" ||
       (chip_device_platform == "darwin" && current_os == "mac")
 
   # Enable ble support.
