--- a/src/platform/mbed/BUILD.gn
+++ b/src/platform/mbed/BUILD.gn
@@ -26,8 +26,6 @@ static_library("mbed") {
     "ConfigurationManagerImpl.cpp",
     "ConnectivityManagerImpl.cpp",
     "ConnectivityManagerImpl.h",
-    "DeviceNetworkProvisioningDelegateImpl.cpp",
-    "DeviceNetworkProvisioningDelegateImpl.h",
     "DiagnosticDataProviderImpl.cpp",
     "DiagnosticDataProviderImpl.h",
     "KeyValueStoreManagerImpl.cpp",
@@ -35,13 +33,20 @@ static_library("mbed") {
     "Logging.cpp",
     "MbedConfig.cpp",
     "MbedEventTimeout.cpp",
-    "NetworkCommissioningDriver.h",
     "PlatformManagerImpl.cpp",
     "SystemTimeSupport.cpp",
     "arch.c",
   ]
 
   public_deps = [ "${chip_root}/src/platform:platform_base" ]
+
+  if (chip_enable_network_commissioning) {
+    sources += [
+      "DeviceNetworkProvisioningDelegateImpl.cpp",
+      "DeviceNetworkProvisioningDelegateImpl.h",
+      "NetworkCommissioningDriver.h",
+    ]
+  }
 
   if (chip_enable_wifi) {
     sources += [
