--- a/src/platform/webos/BUILD.gn
+++ b/src/platform/webos/BUILD.gn
@@ -92,9 +92,6 @@ static_library("webos") {
     "Logging.cpp",
     "MainLoop.cpp",
     "MainLoop.h",
-    "NetworkCommissioningDriver.h",
-    "NetworkCommissioningThreadDriver.cpp",
-    "NetworkCommissioningWiFiDriver.cpp",
     "PlatformManagerImpl.cpp",
     "PlatformManagerImpl.h",
     "PosixConfig.cpp",
@@ -128,9 +125,14 @@ static_library("webos") {
     ]
   }
 
+  if (chip_enable_network_commissioning) {
+    sources += [ "NetworkCommissioningDriver.h" ]
+  }
+
   if (chip_enable_openthread) {
     sources += [
       "GlibTypeDeleter.h",
+      "NetworkCommissioningThreadDriver.cpp",
       "ThreadStackManagerImpl.cpp",
       "ThreadStackManagerImpl.h",
     ]
@@ -139,6 +141,7 @@ static_library("webos") {
   }
 
   if (chip_enable_wifi) {
+    sources += [ "NetworkCommissioningWiFiDriver.cpp" ]
     # TBD: Use webOS specific Wi-Fi resource
     #public_deps += [ "dbus/wpa" ]
   }
