--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -126,10 +126,10 @@ setup payload:
 ############################################################
 platform:
     - src/platform/*
-    - config/tizen/chip-gn/platform
-    - examples/platform
-    - scripts/tools/memory/platform
-    - src/include/platform
+    - config/tizen/chip-gn/platform/*
+    - examples/platform/*
+    - scripts/tools/memory/platform/*
+    - src/include/platform/*
     - src/lib/dnssd/platform/*
 
 darwin:
