--- a/src/app/tests/suites/certification/Test_TC_DRLK_2_4.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DRLK_2_4.yaml
@@ -31,6 +31,7 @@ tests:
                 value: nodeId
 
     - label: "Create new PIN credential and lock/unlock user"
+      PICS: DRLK.S.C22.Rsp
       command: "SetCredential"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -57,6 +58,7 @@ tests:
                 value: 2
 
     - label: "Precondition: Door is in locked state"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -65,12 +67,14 @@ tests:
                 value: "123456"
 
     - label: "TH writes AutoRelockTime attribute value as 10 seconds on the DUT"
+      PICS: DRLK.S.A0023
       command: "writeAttribute"
       attribute: "AutoRelockTime"
       arguments:
           value: 10
 
     - label: "TH sends the unlock with Timeout command to the DUT "
+      PICS: DRLK.S.C03.Rsp
       command: "UnlockWithTimeout"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -81,6 +85,7 @@ tests:
                 value: "123456"
 
     - label: "TH reads AutoRelockTime attribute from DUT"
+      PICS: DRLK.S.A0023
       command: "readAttribute"
       attribute: "AutoRelockTime"
       response:
@@ -95,6 +100,7 @@ tests:
                 value: 5000
 
     - label: "TH reads LockState attribute"
+      PICS: DRLK.S.A0000
       command: "readAttribute"
       attribute: "LockState"
       response:
