--- a/src/app/tests/suites/certification/Test_TC_DRLK_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DRLK_2_2.yaml
@@ -31,12 +31,14 @@ tests:
     - label:
           "TH writes the RequirePINforRemoteOperation attribute value as False
           on the DUT"
+      PICS: DRLK.S.A0033
       command: "writeAttribute"
       attribute: "RequirePINforRemoteOperation"
       arguments:
           value: false
 
     - label: "TH sends Lock Door Command to the DUT without PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -49,12 +51,14 @@ tests:
     - label:
           "TH writes the RequirePINforRemoteOperation attribute value as True on
           the DUT"
+      PICS: DRLK.S.A0033
       command: "writeAttribute"
       attribute: "RequirePINforRemoteOperation"
       arguments:
           value: true
 
     - label: "Create new PIN credential and lock/unlock user"
+      PICS: DRLK.S.C22.Rsp
       command: "SetCredential"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -81,6 +85,7 @@ tests:
                 value: 2
 
     - label: "TH sends Lock Door Command to the DUT with valid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -90,6 +95,7 @@ tests:
 
     - label:
           "TH sends Lock Door Command to the DUT without any argument PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -100,6 +106,7 @@ tests:
           error: FAILURE
 
     - label: "TH writes WrongCodeEntryLimit attribute value as 3 on the DUT"
+      PICS: DRLK.S.A0030
       command: "writeAttribute"
       attribute: "WrongCodeEntryLimit"
       arguments:
@@ -108,12 +115,14 @@ tests:
     - label:
           "TH writes UserCodeTemporaryDisableTime attribute value as 5 seconds
           on the DUT"
+      PICS: DRLK.S.A0031
       command: "writeAttribute"
       attribute: "UserCodeTemporaryDisableTime"
       arguments:
           value: 5
 
     - label: "TH sends Lock Door Command to the DUT with invalid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -124,6 +133,7 @@ tests:
           error: FAILURE
 
     - label: "TH sends Lock Door Command to the DUT with invalid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -134,6 +144,7 @@ tests:
           error: FAILURE
 
     - label: "TH sends Lock Door Command to the DUT with invalid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -144,6 +155,7 @@ tests:
           error: FAILURE
 
     - label: "TH sends Lock Door Command to the DUT with invalid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -154,12 +166,14 @@ tests:
           error: FAILURE
 
     - label: "TH reads UserCodeTemporaryDisableTime attribute from DUT"
+      PICS: DRLK.S.A0031
       command: "readAttribute"
       attribute: "UserCodeTemporaryDisableTime"
       response:
           value: 5
 
     - label: "TH sends Lock Door Command to the DUT with valid PINCode"
+      PICS: DRLK.S.C00.Rsp
       command: "LockDoor"
       timedInteractionTimeoutMs: 10000
       arguments:
@@ -168,6 +182,7 @@ tests:
                 value: "123456"
 
     - label: "Clean the created credential"
+      PICS: DRLK.S.C26.Rsp
       command: "ClearCredential"
       timedInteractionTimeoutMs: 10000
       arguments:
