--- a/src/app/tests/suites/certification/Test_TC_TSTAT_3_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_TSTAT_3_2.yaml
@@ -25,16 +25,19 @@ tests:
           "DUT increases the temperature by sending a SetpointRaiseLower command
           to the Test Harness, with a valid Mode argument (0, 1 or 2) and a
           reasonable positive value that is supported by the DUT."
+      PICS: TSTAT.C.C00.Tx
       verification: |
           On TestHarnes (all-cluster-app) a received setpoint-raise-lower command with f.e. mode 0 and an amount of 10 looks like this:
+
+          ./chip-tool thermostat setpoint-raise-lower 0 10 1 1
 
 
           [1646064221.719107][33190:33190] CHIP:EM: Received message of type 0x8 with protocolId (0, 1) and MessageCounter:4540287 on exchange 31012r
           [1646064221.719148][33190:33190] CHIP:EM: Handling via exchange: 31012r, Delegate: 0xaaaace1730c8
           [1646064221.719450][33190:33190] CHIP:DMG: InvokeRequestMessage =
           [1646064221.719491][33190:33190] CHIP:DMG: {
-          [1646064221.719513][33190:33190] CHIP:DMG:         suppressResponse = false,
-          [1646064221.719539][33190:33190] CHIP:DMG:         timedRequest = false,
+          [1646064221.719513][33190:33190] CHIP:DMG:         suppressResponse = false, 
+          [1646064221.719539][33190:33190] CHIP:DMG:         timedRequest = false, 
           [1646064221.719564][33190:33190] CHIP:DMG:         InvokeRequests =
           [1646064221.719595][33190:33190] CHIP:DMG:         [
           [1646064221.719619][33190:33190] CHIP:DMG:                 CommandDataIB =
@@ -45,16 +48,16 @@ tests:
           [1646064221.719773][33190:33190] CHIP:DMG:                                 ClusterId = 0x201,
           [1646064221.719802][33190:33190] CHIP:DMG:                                 CommandId = 0x0,
           [1646064221.719832][33190:33190] CHIP:DMG:                         },
-          [1646064221.719864][33190:33190] CHIP:DMG:
-          [1646064221.719891][33190:33190] CHIP:DMG:                         CommandData =
+          [1646064221.719864][33190:33190] CHIP:DMG:                         
+          [1646064221.719891][33190:33190] CHIP:DMG:                         CommandData = 
           [1646064221.719922][33190:33190] CHIP:DMG:                         {
-          [1646064221.719955][33190:33190] CHIP:DMG:                                 0x0 = 0,
-          [1646064221.719992][33190:33190] CHIP:DMG:                                 0x1 = 10,
+          [1646064221.719955][33190:33190] CHIP:DMG:                                 0x0 = 0, 
+          [1646064221.719992][33190:33190] CHIP:DMG:                                 0x1 = 10, 
           [1646064221.720023][33190:33190] CHIP:DMG:                         },
           [1646064221.720051][33190:33190] CHIP:DMG:                 },
-          [1646064221.720082][33190:33190] CHIP:DMG:
+          [1646064221.720082][33190:33190] CHIP:DMG:                 
           [1646064221.720107][33190:33190] CHIP:DMG:         ],
-          [1646064221.720137][33190:33190] CHIP:DMG:
+          [1646064221.720137][33190:33190] CHIP:DMG:         
           [1646064221.720161][33190:33190] CHIP:DMG:         InteractionModelRevision = 1
           [1646064221.720184][33190:33190] CHIP:DMG: },
           [1646064221.720243][33190:33190] CHIP:DMG: AccessControl: checking f=1 a=c s=0x000000000001B669 t= c=0x0000_0201 e=1 p=o
@@ -62,19 +65,22 @@ tests:
       disabled: true
 
     - label:
-          "DUT loweres the temperature by sending a SetpointRaiseLower command
-          to the Test Harness, with a valid Mode argument (0, 1 or 2) and a
+          "DUT lowers the temperature by sending a SetpointRaiseLower command to
+          the Test Harness, with a valid Mode argument (0, 1 or 2) and a
           reasonable negative value that is supported by the DUT."
+      PICS: TSTAT.C.C00.Tx
       verification: |
           On TestHarnes (all-cluster-app) a received setpoint-raise-lower command with f.e. mode 0 and an amount of 10 looks like this:
+
+          ./chip-tool thermostat setpoint-raise-lower 0 -10 1 1
 
 
           [1646064525.675075][33190:33190] CHIP:EM: Received message of type 0x8 with protocolId (0, 1) and MessageCounter:16717414 on exchange 9698r
           [1646064525.675116][33190:33190] CHIP:EM: Handling via exchange: 9698r, Delegate: 0xaaaace1730c8
           [1646064525.675402][33190:33190] CHIP:DMG: InvokeRequestMessage =
           [1646064525.675444][33190:33190] CHIP:DMG: {
-          [1646064525.675471][33190:33190] CHIP:DMG:         suppressResponse = false,
-          [1646064525.675497][33190:33190] CHIP:DMG:         timedRequest = false,
+          [1646064525.675471][33190:33190] CHIP:DMG:         suppressResponse = false, 
+          [1646064525.675497][33190:33190] CHIP:DMG:         timedRequest = false, 
           [1646064525.675521][33190:33190] CHIP:DMG:         InvokeRequests =
           [1646064525.675552][33190:33190] CHIP:DMG:         [
           [1646064525.675576][33190:33190] CHIP:DMG:                 CommandDataIB =
@@ -85,16 +91,16 @@ tests:
           [1646064525.675724][33190:33190] CHIP:DMG:                                 ClusterId = 0x201,
           [1646064525.675822][33190:33190] CHIP:DMG:                                 CommandId = 0x0,
           [1646064525.675852][33190:33190] CHIP:DMG:                         },
-          [1646064525.675884][33190:33190] CHIP:DMG:
-          [1646064525.675911][33190:33190] CHIP:DMG:                         CommandData =
+          [1646064525.675884][33190:33190] CHIP:DMG:                         
+          [1646064525.675911][33190:33190] CHIP:DMG:                         CommandData = 
           [1646064525.675941][33190:33190] CHIP:DMG:                         {
-          [1646064525.675971][33190:33190] CHIP:DMG:                                 0x0 = 0,
-          [1646064525.676005][33190:33190] CHIP:DMG:                                 0x1 = -10,
+          [1646064525.675971][33190:33190] CHIP:DMG:                                 0x0 = 0, 
+          [1646064525.676005][33190:33190] CHIP:DMG:                                 0x1 = -10, 
           [1646064525.676033][33190:33190] CHIP:DMG:                         },
           [1646064525.676060][33190:33190] CHIP:DMG:                 },
-          [1646064525.676091][33190:33190] CHIP:DMG:
+          [1646064525.676091][33190:33190] CHIP:DMG:                 
           [1646064525.676114][33190:33190] CHIP:DMG:         ],
-          [1646064525.676143][33190:33190] CHIP:DMG:
+          [1646064525.676143][33190:33190] CHIP:DMG:         
           [1646064525.676167][33190:33190] CHIP:DMG:         InteractionModelRevision = 1
           [1646064525.676189][33190:33190] CHIP:DMG: },
           [1646064525.676247][33190:33190] CHIP:DMG: AccessControl: checking f=1 a=c s=0x000000000001B669 t= c=0x0000_0201 e=1 p=o
@@ -102,34 +108,35 @@ tests:
       disabled: true
 
     - label: "DUT sends a GetRelayStatusLog command to the Test Harness."
+      PICS: TSTAT.C.C04.Tx
       verification: |
           On TestHarnes (all-cluster-app) a received GetRelayStatusLog command looks like this:
-
+          ./chip-tool thermostat  get-relay-status-log  1 1
           [1646064788.912273][33190:33190] CHIP:EM: Received message of type 0x8 with protocolId (0, 1) and MessageCounter:15642355 on exchange 58465r
           [1646064788.912319][33190:33190] CHIP:EM: Handling via exchange: 58465r, Delegate: 0xaaaace1730c8
           [1646064788.912604][33190:33190] CHIP:DMG: InvokeRequestMessage =
           [1646064788.912647][33190:33190] CHIP:DMG: {
-          [1646064788.912673][33190:33190] CHIP:DMG: 	suppressResponse = false,
-          [1646064788.912704][33190:33190] CHIP:DMG: 	timedRequest = false,
-          [1646064788.912732][33190:33190] CHIP:DMG: 	InvokeRequests =
-          [1646064788.912767][33190:33190] CHIP:DMG: 	[
-          [1646064788.912794][33190:33190] CHIP:DMG: 		CommandDataIB =
-          [1646064788.912833][33190:33190] CHIP:DMG: 		{
-          [1646064788.912861][33190:33190] CHIP:DMG: 			CommandPathIB =
-          [1646064788.912896][33190:33190] CHIP:DMG: 			{
-          [1646064788.912936][33190:33190] CHIP:DMG: 				EndpointId = 0x1,
-          [1646064788.912977][33190:33190] CHIP:DMG: 				ClusterId = 0x201,
-          [1646064788.913010][33190:33190] CHIP:DMG: 				CommandId = 0x4,
-          [1646064788.913048][33190:33190] CHIP:DMG: 			},
-          [1646064788.913085][33190:33190] CHIP:DMG:
-          [1646064788.913116][33190:33190] CHIP:DMG: 			CommandData =
-          [1646064788.913151][33190:33190] CHIP:DMG: 			{
-          [1646064788.913186][33190:33190] CHIP:DMG: 			},
-          [1646064788.913218][33190:33190] CHIP:DMG: 		},
-          [1646064788.913253][33190:33190] CHIP:DMG:
-          [1646064788.913280][33190:33190] CHIP:DMG: 	],
-          [1646064788.913313][33190:33190] CHIP:DMG:
-          [1646064788.913340][33190:33190] CHIP:DMG: 	InteractionModelRevision = 1
+          [1646064788.912673][33190:33190] CHIP:DMG:         suppressResponse = false, 
+          [1646064788.912704][33190:33190] CHIP:DMG:         timedRequest = false, 
+          [1646064788.912732][33190:33190] CHIP:DMG:         InvokeRequests =
+          [1646064788.912767][33190:33190] CHIP:DMG:         [
+          [1646064788.912794][33190:33190] CHIP:DMG:                 CommandDataIB =
+          [1646064788.912833][33190:33190] CHIP:DMG:                 {
+          [1646064788.912861][33190:33190] CHIP:DMG:                         CommandPathIB =
+          [1646064788.912896][33190:33190] CHIP:DMG:                         {
+          [1646064788.912936][33190:33190] CHIP:DMG:                                 EndpointId = 0x1,
+          [1646064788.912977][33190:33190] CHIP:DMG:                                 ClusterId = 0x201,
+          [1646064788.913010][33190:33190] CHIP:DMG:                                 CommandId = 0x4,
+          [1646064788.913048][33190:33190] CHIP:DMG:                         },
+          [1646064788.913085][33190:33190] CHIP:DMG:                         
+          [1646064788.913116][33190:33190] CHIP:DMG:                         CommandData = 
+          [1646064788.913151][33190:33190] CHIP:DMG:                         {
+          [1646064788.913186][33190:33190] CHIP:DMG:                         },
+          [1646064788.913218][33190:33190] CHIP:DMG:                 },
+          [1646064788.913253][33190:33190] CHIP:DMG:                 
+          [1646064788.913280][33190:33190] CHIP:DMG:         ],
+          [1646064788.913313][33190:33190] CHIP:DMG:         
+          [1646064788.913340][33190:33190] CHIP:DMG:         InteractionModelRevision = 1
           [1646064788.913366][33190:33190] CHIP:DMG: },
           [1646064788.913428][33190:33190] CHIP:DMG: AccessControl: checking f=1 a=c s=0x000000000001B669 t= c=0x0000_0201 e=1 p=o
           [1646064788.913476][33190:33190] CHIP:DMG: Received command for Endpoint=1 Cluster=0x0000_0201 Command=0x0000_0004
