Brought back the auto-stack init in native, albeit, a minimal version only.
Updated ChipStack to now use native to implicitly achieve this auto init
(which sets up MemoryInit) before continuining onwards with
controller-style initialization.

--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -44,7 +44,7 @@ shared_library("ChipDeviceCtrl") {
     "chip/setup_payload/Parser.cpp",
   ]
 
-  sources += [ "CommonStackInit.cpp" ]
+  sources += [ "chip/native/CommonStackInit.cpp" ]
 
   if (chip_controller) {
     sources += [
