--- a/examples/chef/cicd_config.json
+++ b/examples/chef/cicd_config.json
@@ -2,15 +2,8 @@
     "ci_allow_list": ["rootnode_dimmablelight_bCwGYSDpoe"],
     "cd_platforms": {
         "linux": {
-            "linux_x86": [
-                "--cpu_type",
-                "x64"
-            ],
-            "linux_arm64_ipv6only": [
-                "--cpu_type",
-                "arm64",
-                "--ipv6only"
-            ]
+            "linux_x86": ["--cpu_type", "x64"],
+            "linux_arm64_ipv6only": ["--cpu_type", "arm64", "--ipv6only"]
         },
         "esp32": {
             "m5stack": []
