--- a/examples/darwin-framework-tool/BUILD.gn
+++ b/examples/darwin-framework-tool/BUILD.gn
@@ -93,6 +93,9 @@ executable("darwin-framework-tool") {
     "commands/pairing/PairingCommandBridge.mm",
     "commands/pairing/PairingDelegateBridge.mm",
     "commands/payload/SetupPayloadParseCommand.mm",
+    "commands/provider/OTAProviderDelegate.mm",
+    "commands/provider/OTASoftwareUpdateInteractive.mm",
+    "commands/provider/Commands.h",
     "commands/storage/Commands.h",
     "commands/storage/StorageManagementCommand.mm",
     "main.mm",
