--- a/src/platform/nrfconnect/BUILD.gn
+++ b/src/platform/nrfconnect/BUILD.gn
@@ -49,7 +49,11 @@ static_library("nrfconnect") {
     "SystemPlatformConfig.h",
   ]
 
-  public = [ "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h" ]
+  public = [
+    "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h",
+    "${chip_root}/src/credentials/CertificationDeclaration.h",
+    "${chip_root}/src/credentials/CHIPCert.h"
+    ]
 
   public_deps = [ "${chip_root}/src/platform:platform_base" ]
 
