--- a/examples/all-clusters-app/p6/BUILD.gn
+++ b/examples/all-clusters-app/p6/BUILD.gn
@@ -41,7 +41,8 @@ declare_args() {
 }
 
 config("p6_ota_config") {
-  linker_script = "${chip_root}/third_party/p6/p6_sdk/ota/cy8c6xxa_cm4_dual_ota_int.ld"
+  linker_script =
+      "${chip_root}/third_party/p6/p6_sdk/ota/cy8c6xxa_cm4_dual_ota_int.ld"
 
   ldflags = [ "-T" + rebase_path(linker_script, root_build_dir) ]
 
