--- a/src/app/tests/suites/certification/Test_TC_DRLK_2_7.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DRLK_2_7.yaml
@@ -225,7 +225,8 @@ tests:
                 value: 1
 
     - label:
-          "send Get Year Day Schedule Command to DUT and verify NOT_FOUND response"
+          "send Get Year Day Schedule Command to DUT and verify NOT_FOUND
+          response"
       PICS: DRLK.S.F04 && DRLK.S.C0F.Rsp && DRLK.S.C0F.Tx && DRLK.S.C10.Rsp
       command: "GetYearDaySchedule"
       arguments:
@@ -249,8 +250,7 @@ tests:
                 constraints:
                     hasValue: false
 
-    - label:
-          "Send Set Year Day Schedule Command to DUT "
+    - label: "Send Set Year Day Schedule Command to DUT "
       PICS: DRLK.S.C0E.Rsp
       command: "SetYearDaySchedule"
       arguments:
