--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -59,12 +59,15 @@ shared_library("ChipDeviceCtrl") {
       "chip/clusters/attribute.cpp",
       "chip/clusters/command.cpp",
       "chip/discovery/NodeResolution.cpp",
+      "chip/dynamic_server/Server.cpp",
       "chip/interaction_model/Delegate.cpp",
       "chip/interaction_model/Delegate.h",
       "chip/internal/ChipThreadWork.cpp",
       "chip/internal/ChipThreadWork.h",
       "chip/internal/CommissionerImpl.cpp",
       "chip/logging/LoggingRedirect.cpp",
+      "chip/server/Options.cpp",
+      "chip/server/ServerInit.cpp",
     ]
   } else {
     sources += [
@@ -102,7 +105,7 @@ shared_library("ChipDeviceCtrl") {
 
   if (chip_controller) {
     public_deps += [
-      "${chip_root}/src/controller/data_model",
+      "${chip_root}/src/controller/python/data-model",
       "${chip_root}/src/credentials:file_attestation_trust_store",
     ]
   } else {
@@ -149,6 +152,8 @@ pw_python_action("python") {
         "chip/discovery/__init__.py",
         "chip/discovery/library_handle.py",
         "chip/discovery/types.py",
+        "chip/dynamic_server/AfTypes.py",
+        "chip/dynamic_server/Server.py",
         "chip/exceptions/__init__.py",
         "chip/interaction_model/__init__.py",
         "chip/interaction_model/delegate.py",
